--- a/themes/uhsg_theme/sass/components/_search.scss
+++ b/themes/uhsg_theme/sass/components/_search.scss
@@ -36,6 +36,9 @@
       flex: 0 35%;
     }
   }
+  .view-result {
+    margin: 2em 0 1em 0;
+  }
 }
 
 .ui-autocomplete {
